--- a/package.json
+++ b/package.json
@@ -5,23 +5,34 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npx tsc --watch\" \"nodemon -q -r dotenv/config dist/index.js\"",
+    "test": "npx jest --silent --setupFiles dotenv/config --detectOpenHandles",
     "clean": "npx tsc --build --clean",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npx eslint --fix --ext .ts . && npx prettier --write .",
+    "check-lint": "npx eslint --ext .ts . && npx prettier --check ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.26",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.2.0"
   },
   "dependencies": {
+    "envalid": "^8.0.0",
     "express": "^4.18.3"
   }
 }
