--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -37,3 +37,6 @@ jobs:
 
       - name: Run Tests and Code Coverage
         run: npm test
+
+      - name: Set status
+        run: echo "::set-output name=status::success"
