--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -2,7 +2,7 @@ name: 'PR'
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, edited]
+    types: [opened, reopened, synchronize]
     branches: [main]
 
 # This allows a subsequently queued workflow run to interrupt previous runs
