--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "Chatter Backend",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npx tsc --watch\" \"nodemon -q -r dotenv/config dist/index.js\"",
+    "start": "concurrently \"npx tsc --watch\" \"nodemon -q -r dotenv/config dist/src/index.js\"",
     "test": "npx jest --silent --setupFiles dotenv/config --detectOpenHandles",
     "clean": "npx tsc --build --clean",
-    "lint": "npx eslint --fix --ext .ts . && npx prettier --write .",
-    "check-lint": "npx eslint --ext .ts . && npx prettier --check ."
+    "lint": "npx eslint --fix --ext .ts . && npx prettier --write . && npx prisma format",
+    "check-lint": "npx eslint --ext .ts . && npx prettier --check .",
+    "gen-schema": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -26,13 +32,19 @@
     "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "prisma": "^5.11.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.2.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.537.0",
+    "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "envalid": "^8.0.0",
-    "express": "^4.18.3"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
