--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "prisma": "^5.11.0",
