--- a/jest.config.json
+++ b/jest.config.json
@@ -5,7 +5,6 @@
   "testMatch": ["**/test/*.test.ts?(x)"],
   "clearMocks": true,
   "preset": "ts-jest",
-  "setupFilesAfterEnv": ["<rootDir>/test/singleton.ts"],
   "collectCoverage": true,
   "coverageReporters": ["html", "text-summary"],
   "coverageThreshold": {
@@ -15,5 +14,7 @@
       "lines": 95,
       "statements": 95
     }
-  }
+  },
+  "setupFilesAfterEnv": ["<rootDir>/test/utils/singleton.ts"],
+  "setupFiles": ["<rootDir>/test/utils/setup.ts"]
 }
