--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcrypt": "^5.1.1",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2"
   }
 }
