--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npx jest --setupFiles dotenv/config --detectOpenHandles",
     "clean": "npx tsc --build --clean",
     "lint": "npx eslint --fix --ext .ts src/ test/ && npx prettier --write src/ test/ && npx prisma format",
-    "check-lint": "npx eslint --ext .ts src/ test && npx prettier --check src/ test/",
+    "check-lint": "npx eslint --ext .ts src/ test/ && npx prettier --check src/ test/",
     "gen-schema": "npx prisma generate"
   },
   "author": "",
