--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -15,6 +15,13 @@ jobs:
     environment: test
     env:
       PORT: 3000
+      DATABASE_URL: postgresql://admin:pass@localhost:5432/chatter?schema=public
+      STORAGE_BUCKET_NAME: local-chatter-storage
+      AWS_S3_ENDPOINT: http://0.0.0.0:4566
+      AWS_DEFAULT_REGION: us-east-1
+      AWS_ACCESS_KEY_ID: test
+      AWS_SECRET_ACCESS_KEY: test
+      TOKEN_SECRET: +B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP
 
     runs-on: 'ubuntu-latest'
     permissions:
@@ -26,7 +33,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 16.13.x
+          node-version: 20
           cache: npm
 
       - name: Install Dependencies
