--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.26",
+    "@types/node": "^20.12.5",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "concurrently": "^8.2.2",
@@ -32,9 +32,10 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
+    "libpg-query": "^16.1.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
-    "prisma": "^5.11.0",
+    "prisma": "^5.14.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -43,7 +44,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.537.0",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
