--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean": "npx tsc --build --clean",
     "lint": "npx eslint --fix --ext .ts src/ test/ && npx prettier --write src/ test/ && npx prisma format",
     "check-lint": "npx eslint --ext .ts src/ test/ && npx prettier --check src/ test/",
-    "gen-db-schema": "npx prisma generate",
-    "gen-openapi-types": "npx openapi-typescript ./openapi/schema.yaml -o ./openapi/generatedSchema.ts"
+    "gen-db-schema": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
@@ -52,7 +51,6 @@
     "express-validator": "^7.0.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
-    "npm": "^10.8.0",
-    "openapi-typescript": "^6.7.6"
+    "npm": "^10.8.0"
   }
 }
