Revert "Add openapi schema (#7)"
This reverts commit af4e17c6174928c11c6cf842f14cf8493345d5e8.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "npx tsc --build --clean",
     "lint": "npx eslint --fix --ext .ts src/ test/ && npx prettier --write src/ test/ && npx prisma format",
     "check-lint": "npx eslint --ext .ts src/ test/ && npx prettier --check src/ test/",
-    "gen-db-schema": "npx prisma generate"
+    "gen-schema": "npx prisma generate"
   },
   "author": "",
   "license": "ISC",
@@ -49,8 +49,6 @@
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "i": "^0.3.7",
-    "jsonwebtoken": "^9.0.2",
-    "npm": "^10.8.0"
+    "jsonwebtoken": "^9.0.2"
   }
 }
