--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -1,5 +1,6 @@
 name: 'PR'
 on:
+  workflow_dispatch:
   pull_request:
     branches: [main]
 
@@ -9,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-code:
+  run-tests:
     environment: test
     env:
       PORT: 3000
