--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -2,7 +2,6 @@ name: 'PR'
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, reopened, synchronize]
     branches: [main]
 
 # This allows a subsequently queued workflow run to interrupt previous runs
@@ -11,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  check-code:
+  run-tests:
     environment: test
     env:
       PORT: 3000
