--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.5",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
@@ -50,7 +52,9 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "i": "^0.3.7",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "npm": "^10.8.0"
+    "npm": "^10.8.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
