--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -46,7 +47,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.537.0",
+    "@aws-sdk/s3-request-presigner": "^3.583.0",
     "@prisma/client": "^5.14.0",
+    "aws-sdk": "^2.1628.0",
     "bcrypt": "^5.1.1",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
