--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
@@ -53,6 +54,7 @@
     "@prisma/client": "^5.14.0",
     "aws-sdk": "^2.1628.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
