--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20.12.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
@@ -65,6 +66,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "npm": "^10.8.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "ws": "^8.18.0"
   }
 }
