--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -16,10 +16,10 @@ jobs:
       PORT: 3000
       DATABASE_URL: postgresql://admin:pass@localhost:5432/chatter?schema=public
       STORAGE_BUCKET_NAME: local-chatter-storage
-      AWS_S3_ENDPOINT: http://0.0.0.0:4566
-      AWS_DEFAULT_REGION: us-east-1
-      AWS_ACCESS_KEY_ID: test
-      AWS_SECRET_ACCESS_KEY: test
+      S3_ENDPOINT: http://0.0.0.0:4566
+      DEFAULT_REGION: us-east-1
+      ACCESS_KEY_ID: test
+      SECRET_ACCESS_KEY: test
       TOKEN_SECRET: +B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP
 
     runs-on: 'ubuntu-latest'
