--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,14 @@ files:
     destination: /
 hooks:
   BeforeInstall:
-    - location: npm run build
+    - location: ./scripts/build_application.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: ./scripts/write_env.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: node dist/src/index.js
+    - location: ./scripts/start_application.sh
       timeout: 300
       runas: root
