--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,18 @@
 version: 0.0
 os: linux
 files:
-  - source: /
-    destination: /
+  - source: /dist
+    destination: /dist
+hooks:
+  BeforeInstall:
+    - location: ./scripts/build_application.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: ./scripts/write_env.sh
+      timeout: 300
+      runas: root
+  ApplicationStart:
+    - location: ./scripts/start_application.sh
+      timeout: 300
+      runas: root
