--- a/appspec.yml
+++ b/appspec.yml
@@ -2,17 +2,17 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /application-code
+    destination: /home/ec2-user/my-app
 hooks:
   BeforeInstall:
     - location: ./scripts/build_application.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
   AfterInstall:
     - location: ./scripts/write_env.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
   ApplicationStart:
     - location: ./scripts/start_application.sh
       timeout: 300
-      runas: root
+      runas: ec2-user
