--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -25,6 +25,9 @@ jobs:
           node-version: 20.12.x
           cache: npm
 
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Create Production Build
         run: CI='' npm run build
 
