--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -15,6 +15,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    environment: prod
     steps:
       - name: Checkout
         uses: actions/checkout@v4
