--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Sync webserver build to S3
         run: |
           zip -r my-app.zip dist && \
-          aws s3 sync my-app.zip s3://chatter-be
+          aws s3 cp my-app.zip s3://chatter-be
