--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -44,15 +44,13 @@ jobs:
           aws s3 cp my-app.zip s3://chatter-be
 
       - name: Create a CodeDeploy deployment
-        # env:
-        #   PORT: '8080'
-        #   DATABASE_URL: 'postgresql://admin:pass@localhost:5432/chatter?schema=public'
-        #   STORAGE_BUCKET_NAME: "local-chatter-storage"
-        #   AWS_S3_ENDPOINT: 'http://0.0.0.0:4566'
-        #   AWS_DEFAULT_REGION: 'us-east-1'
-        #   AWS_ACCESS_KEY_ID: 'test'
-        #   AWS_SECRET_ACCESS_KEY: 'test'
-        #   TOKEN_SECRET: '+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
+        env:
+          PORT: '8080'
+          DATABASE_URL: 'postgresql://admin:pass@localhost:5432/chatter?schema=public'
+          STORAGE_BUCKET_NAME: "local-chatter-storage"
+          AWS_S3_ENDPOINT: 'http://0.0.0.0:4566'
+          AWS_DEFAULT_REGION: 'us-east-1'
+          TOKEN_SECRET: '+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
         run: |
           aws deploy create-deployment \
             --application-name chatter \
