--- a/appspec.yml
+++ b/appspec.yml
@@ -11,4 +11,4 @@ hooks:
   ApplicationStart:
     - location: ./scripts/start_application.sh
       timeout: 300
-      runas: ec2-user
+      runas: root
