--- a/appspec.yml
+++ b/appspec.yml
@@ -9,6 +9,10 @@ hooks:
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: ./scripts/start_application.sh
+    - location: ./scripts/start_server.sh
       timeout: 300
       runas: root
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: ec2-user
