--- a/appspec.yml
+++ b/appspec.yml
@@ -13,7 +13,7 @@ hooks:
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: ./scripts/start_server.sh
+    - location: ./scripts/start_serdver.sh
       timeout: 300
       runas: root
   ApplicationStop:
