--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -46,19 +46,19 @@ jobs:
           REPOSITORY: my-ecr-repo
           IMAGE_TAG: "latest"
         run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker build --progress=plain -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-      - name: Check Deployment Existence
-        id: stack_check
-        run: |
-          STACK_NAME="DynamicStack"
-          aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
-          echo ::set-output name=stack_exists::${?}
+      # - name: Check Deployment Existence
+      #   id: stack_check
+      #   run: |
+      #     STACK_NAME="DynamicStack"
+      #     aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
+      #     echo ::set-output name=stack_exists::${?}
 
-      - name: Chicken Nugget
-        run: |
-          echo "chicken nugget"
+      # - name: Chicken Nugget
+      #   run: |
+      #     echo "chicken nugget"
       # - name: Update Deployment
       #   if: steps.stack_check.outputs.stack_exists == '0'
       #   run: |
