--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -43,22 +43,23 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: my-ecr-repo
+          REPOSITORY: chatter-be
           IMAGE_TAG: "latest"
         run: |
-          docker build --progress=plain -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-      # - name: Check Deployment Existence
-      #   id: stack_check
-      #   run: |
-      #     STACK_NAME="DynamicStack"
-      #     aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
-      #     echo ::set-output name=stack_exists::${?}
+      - name: Check Deployment Existence
+        id: stack_check
+        run: |
+          STACK_NAME="DynamicStack"
+          aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
+          echo ::set-output name=stack_exists::${?}
 
-      # - name: Chicken Nugget
-      #   run: |
-      #     echo "chicken nugget"
+      - name: Chicken Nugget
+        run: |
+          echo "chicken nugget"
+          
       # - name: Update Deployment
       #   if: steps.stack_check.outputs.stack_exists == '0'
       #   run: |
