--- a/.github/workflows/on-merge.yml
+++ b/.github/workflows/on-merge.yml
@@ -34,6 +34,11 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/gha-deployment
           aws-region: us-east-1
 
+      - name: Check ECR Existence
+        run: |
+          STACK_NAME="DynamicStack"
+          aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -50,16 +55,14 @@ jobs:
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
       - name: Check Deployment Existence
-        id: stack_check
         run: |
           STACK_NAME="DynamicStack"
           aws cloudformation describe-stacks --stack-name $STACK_NAME > /dev/null 2>&1
-          echo ::set-output name=stack_exists::${?}
 
       - name: Chicken Nugget
         run: |
           echo "chicken nugget"
-          
+
       # - name: Update Deployment
       #   if: steps.stack_check.outputs.stack_exists == '0'
       #   run: |
