--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,5 @@
 services:
-  api:
-    build:
-      context: .
-    ports: 
-      - "4000:4000"
-    env_file:
-      - .env
-    volumes:
-      - .env:/app/.env
-
-  db:
+  database:
     image: postgres
     restart: always
     environment:
@@ -18,6 +8,12 @@ services:
       POSTGRES_DB: chatter
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d chatter"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 5s
 
   adminer:
     image: adminer
@@ -37,3 +33,26 @@ services:
       - ./localstack/content:/content
       - ./volume:/var/lib/localstack
       - /var/run/docker.sock:/var/run/docker.sock
+
+  # api:
+  #   build:
+  #     context: .
+  #   ports: 
+  #     - "4000:4000"
+  #   env_file:
+  #     - .env
+  #   command: ["sh", "-c", "node dist/src/index.js"]
+  #   networks:
+  #     - my_network
+
+  seed:
+    build:
+      context: .
+      dockerfile: Dockerfile.seed
+    depends_on:
+      database:
+        condition: service_healthy
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql://admin:pass@database:5432/chatter?schema=public
