--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "concurrently \"npx tsc --watch\" \"nodemon -q -r dotenv/config dist/src/index.js\"",
     "test": "npx jest --setupFiles dotenv/config --detectOpenHandles",
+    "test:integration": "jest test/integration --setupFiles dotenv/config",
     "clean": "npx tsc --build --clean",
     "lint": "npx eslint --fix --ext .ts src/ test/ && npx prettier --write src/ test/ && npx prisma format",
     "check-lint": "npx eslint --ext .ts src/ test/ && npx prettier --check src/ test/",
@@ -40,13 +41,13 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "libpg-query": "^16.1.0",
+    "node-ts": "^6.1.3",
     "nodemon": "^3.1.0",
     "openapi-typescript": "^7.0.0-rc.0",
     "prettier": "^3.2.5",
     "prisma": "^6.0.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^7.2.0"
   },
@@ -67,6 +68,7 @@
     "jsonwebtoken": "^9.0.2",
     "npm": "^10.8.0",
     "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
     "ws": "^8.18.0"
   }
 }
