--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npx tsc --watch\" \"nodemon -q -r dotenv/config dist/src/index.js\"",
-    "test": "npx jest --setupFiles dotenv/config --detectOpenHandles",
-    "test:integration": "jest test/integration --setupFiles dotenv/config",
+    "test": "npx jest --selectProjects unit --setupFiles dotenv/config --detectOpenHandles",
+    "test:integration": "npx jest --selectProjects integration --setupFiles dotenv/config",
     "clean": "npx tsc --build --clean",
     "lint": "npx eslint --fix --ext .ts src/ test/ && npx prettier --write src/ test/ && npx prisma format",
     "check-lint": "npx eslint --ext .ts src/ test/ && npx prettier --check src/ test/",
@@ -38,6 +38,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
+    "execa": "^9.5.2",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
     "libpg-query": "^16.1.0",
