--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "axios": "^1.7.9",
-    "axios-cookiejar-support": "^5.0.5",
     "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
     "cookie": "^1.0.2",
@@ -47,10 +46,8 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.9.0",
-    "execa": "^9.5.2",
     "jest": "^29.7.0",
     "jest-mock-extended": "^3.0.5",
-    "libpg-query": "^16.1.0",
     "node-ts": "^6.1.3",
     "nodemon": "^3.1.0",
     "openapi-typescript": "^7.0.0-rc.0",
@@ -58,17 +55,14 @@
     "prisma": "^6.1.0",
     "supertest": "^6.3.4",
     "supertest-session": "^5.0.1",
-    "tough-cookie": "^5.0.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^7.2.0",
-    "unicorn-magic": "^0.3.0"
+    "typescript-eslint": "^7.2.0"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.537.0",
     "@aws-sdk/s3-request-presigner": "^3.590.0",
     "@prisma/client": "^6.1.0",
-    "aws-sdk": "^2.1628.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
