--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,10 @@
       "@src/*": ["src/*"],
       "@test/*": ["test/*"],
       "@openapi/*": ["openapi/*"],
+      "@prisma/*": ["prisma/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [] /* Allow multiple folders to be treated as one when resolving modules. */,
-    "typeRoots": ["node_modules/@types", "src/types"],   /* Specify multiple folders that act like './node_modules/@types'. */
+    "typeRoots": ["node_modules/@types"],   /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
       "node",
       "jest"
