--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - STORAGE_BUCKET_NAME=${STORAGE_BUCKET_NAME}
       - AWS_S3_ENDPOINT=${AWS_S3_ENDPOINT}
+      - AWS_S3_URL_SIGNER_ENDPOINT=${AWS_S3_URL_SIGNER_ENDPOINT}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - TOKEN_SECRET=${TOKEN_SECRET}
     ports:
