--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@openapi": "dist/openapi"
   },
   "prisma": {
-    "seed": "ts-node -r tsconfig-paths/register prisma/seed/index.ts"
+    "seed": "ts-node -r tsconfig-paths/register --project tsconfig.seed.json prisma/seed/index.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
