--- a/.env.docker
+++ b/.env.docker
@@ -5,12 +5,12 @@ DATABASE_URL='postgresql://admin:pass@database:5432/chatter?schema=public'
 
 STORAGE_BUCKET_NAME='local-chatter-storage'
 
-AWS_S3_ENDPOINT='http://localstack:4566'
-AWS_S3_URL_SIGNER_ENDPOINT='http://0.0.0.0:4566'
+AWS_S3_ENDPOINT='https://localstack:4566'
+AWS_S3_URL_SIGNER_ENDPOINT='https://0.0.0.0:4566'
 
 AWS_DEFAULT_REGION='us-east-1'
 
-FRONTEND_ENDPOINT='http://localhost'
+FRONTEND_ENDPOINT='https://localhost'
 
 # JWT
 TOKEN_SECRET='+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
