--- a/.env.docker
+++ b/.env.docker
@@ -12,11 +12,12 @@ AWS_DEFAULT_REGION='us-east-1'
 
 FRONTEND_ENDPOINT='https://localhost'
 
+DB_USERNAME='admin'
+DB_PASSWORD='pass'
+
 # JWT
 TOKEN_SECRET='+B*8nUZLkhdI7cBK+wt.St>3UF=k|5uo5{P@Q=&=VVmnTYCl;A(vwh/)h}!.J8pP'
 
 # Acceptance testing
 TESTING_HTTP_ENDPOINT='http://localhost'
 TESTING_WS_ENDPOINT='ws://localhost'
-SERVICE_ACCOUNT_USERNAME='brian'
-SERVICE_ACCOUNT_PASSWORD='admin'
