--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - AWS_S3_ENDPOINT=${AWS_S3_ENDPOINT}
       - AWS_S3_URL_SIGNER_ENDPOINT=${AWS_S3_URL_SIGNER_ENDPOINT}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - TOKEN_SECRET=${TOKEN_SECRET}
       - FRONTEND_ENDPOINT=${FRONTEND_ENDPOINT}
     ports:
