--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - TOKEN_SECRET=${TOKEN_SECRET}
-      - FRONTEND_ENDPOINT=${FRONTEND_ENDPOINT}
+      - FRONTEND_ENDPOINTS=${FRONTEND_ENDPOINTS}
     ports:
       - "4000:4000"
     volumes:
