--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -43,8 +43,5 @@ jobs:
       - name: Generate TS Types from OpenAPI Schema
         run: npm run gen-openapi-ts
 
-      # - name: Run Tests and Code Coverage
-      #   run: npm test
-
-      - name: Set status
-        run: echo "status=$([ "${{ job.status }}" == "success" ] && echo "CI-${GITHUB_RUN_ID}-success" || echo "CI-${GITHUB_RUN_ID}-failure")" >> $GITHUB_ENV
+      - name: Run Tests and Code Coverage
+        run: npm test
