--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,19 +5,13 @@
     "jest/globals": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "@bouzomgi/s/backend"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "jest"
-  ],
   "ignorePatterns": [
     "dist/",
     "coverage/"
@@ -29,28 +23,5 @@
         "jest": true
       }
     }
-  ],
-  "rules": {
-    "array-callback-return": 2,
-    "no-await-in-loop": 2,
-    "no-duplicate-imports": 2,
-    "no-self-compare": 2,
-    "no-template-curly-in-string": 2,
-    "no-unmodified-loop-condition": 2,
-    "no-unreachable-loop": 2,
-    "arrow-body-style": [2, "as-needed"],
-    "camelcase": 2,
-    "consistent-return": 2,
-    "func-style": [2, "declaration", { "allowArrowFunctions": true }],
-    "no-array-constructor": 2,
-    "no-eval": 2,
-    "no-lonely-if": 2,
-    "no-return-await": 2,
-    "no-useless-return": 2,
-    "no-var": 2,
-    "prefer-arrow-callback": 2,
-    "prefer-const": 2,
-    "require-await": 2,
-    "spaced-comment": 2
-  }
+  ]
 }
